--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
     "apexcharts": "3.44.0",
+    "install": "^0.13.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "6.17.0"
   },
   "devDependencies": {
